# zotero-rag

./: .env.deploy.example  .env.dist  .env.test  .gitignore  .releaserc.json  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.smoke.yml  docker-compose.yml  main.py  package-lock.json  package.json  public-libraries.example.json  pyproject.toml  updates.json  zotero-plugin.config.js
.claude/: settings.local.json
.github/workflows/: ci.yml  docker-build.yml  release.yml
.local/: .env.deploy-localhost
backend/: .env.example  __version__.py  dependencies.py  logging_config.json  main.py
backend/api/: auth.py  autoindex.py  collections.py  config.py  document_upload.py  indexing.py  libraries.py  public_query.py  query.py  rate_limits.py  registration.py  sync.py
backend/config/: presets.py  settings.py
backend/db/: vector_store.py
backend/models/: __init__.py  collection.py  conversation.py  document.py  filters.py  library.py  trace.py
backend/services/: access_gate.py  autoindex_key_store.py  autoindex_resolver.py  autoindex_scheduler.py  base_agent.py  chunking.py  collection_vector_service.py  continuation_agent.py  cron_indexer.py  document_processor.py  embedding_key_validator.py  embeddings.py  llm.py  mentions_agent.py  metadata_agent.py  pdf_extractor.py  query_orchestrator.py  query_router.py  rag_agent.py  rag_engine.py  registration_service.py  snapshot_manager.py  trace_collector.py  vector_sync.py  zotero_identity.py
backend/storage/: __init__.py  base.py  factory.py  s3.py  webdav.py
backend/templates/: public_form.html  public_result.html
backend/tests/: conftest.py  test_access_gate.py  test_api.py  test_api_collections.py  test_api_endpoints.py  test_api_incremental_indexing.py  test_api_integration.py  (+59 more)
config/: kreuzberg.toml
docs/: agents.md  architecture.md  auto-indexing-setup.md  changelog.md  ci-cd.md  cli.md  comparison.md  container-deployment.md  cron-indexing.md  debugging-rag-queries.md  docker-deployment.md  fix-unavailable-attachments.md  indexing-counts.md  indexing.md  integration-testing-quickstart.md  openalex-import.md  presets.md  public-web-interface.md  query-routing.md  remote-api-kisski.md  setup-ci-cd.md  testing.md  vector-sync-guide.md  zotero-local-api.md  zotero-note-editor.md  zotero-plugin-dev.md  zotero-plugin-toolkit.md  zotero-reader-api.md
implementation/: master.md  phase1-progress.md  phase1.5-progress.md  phase2-progress.md  phase4-progress.md  plugin-dialog-final.md  prompt.md  zotero-local-api.md  zotero-plugin-dev.md
plugin/: README.md  jsconfig.json  manifest.json
scripts/: README.md  build-plugin.js  build_plugin.py  build_toolkit.js  check_embedding_compat.py  debug_libraries.py  debug_live_query.py  diagnose_library.py  downgrade_to_python312.ps1  downgrade_to_python312.sh  eval_embeddings.py  migrate_library_id.py  openalex_import.py  query_trace.py  server.py  setup_hooks.py  strip_ansi.py  test_env.py  test_kisski_api.py  test_markdown_conversion.py  test_metadata_queries.py  test_pdf_split.py  test_startup_sequence.py  validate_commit_msg.py  version.py  zotero_plugin.py
test/: container_env_file.test.mjs
typings/: i10n.d.ts
(+109 files in other folders)
