[project]
name = "zotero-rag"
version = "0.1.0"
description = "Zotero-integrated RAG system with FastAPI backend and Zotero plugin"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "pyzotero>=1.5.0",
    "qdrant-client>=1.12.0",
    "sentence-transformers>=3.3.0",
    "transformers>=4.46.0",
    "torch>=2.5.0",
    "spacy>=3.8.0",
    "pypdf>=5.1.0",
    "aiohttp>=3.11.0",
    "httpx>=0.27.0",
    "sse-starlette>=2.2.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "einops>=0.8.1",
    "psutil>=7.1.3",
    "openai>=2.7.1",
    "anthropic>=0.72.0",
    "bitsandbytes>=0.48.2",
    "accelerate>=1.11.0",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
markers = [
    "integration: marks tests that require real external services (Zotero, APIs)",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
# Default: skip integration tests unless explicitly requested
addopts = "-m 'not integration'"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

